--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -1,60 +1,44 @@
-# This workflow will build a .NET Core project and deploy it to an Azure Functions App on Windows or Linux when a commit is pushed to your default branch.
-#
-# This workflow assumes you have already created the target Azure Functions app.
-# For instructions see https://learn.microsoft.com/en-us/azure/azure-functions/create-first-function-vs-code-csharp?tabs=in-process
-#
-# To configure this workflow:
-# 1. Set up the AZURE_RBAC_CREDENTIALS secret in your repository (preferred) OR AZURE_FUNCTIONAPP_PUBLISH_PROFILE (alternative)
-# 2. Change env variables for your configuration.
-#
-# For more information on:
-#   - GitHub Actions for Azure: https://github.com/Azure/Actions
-#   - Azure Functions Action: https://github.com/Azure/functions-action
-#   - Publish Profile: https://github.com/Azure/functions-action#using-publish-profile-as-deployment-credential-recommended
-#   - Azure Service Principal for RBAC: https://github.com/Azure/functions-action#using-azure-service-principal-for-rbac-as-deployment-credential
-#
-# For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples/tree/master/FunctionApp
-
+# Deploy a .NET Function App using Azure RBAC (AZURE_RBAC_CREDENTIALS secret)
 name: Deploy DotNet project to Azure Function App
 
 on:
   push:
     branches: ["main"]
+  workflow_dispatch: {}
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'FlightFinder.API'   # set this to your function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'           # set this to the path to your function app project, defaults to the repository root
-  DOTNET_VERSION: '9.0.x'                       # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
+  AZURE_FUNCTIONAPP_NAME: 'flightfinder-api'             # set to the exact app name you created
+  AZURE_FUNCTIONAPP_PROJECT_PATH: './src/FlightFinder.API' # change to folder containing your Function .csproj
+  DOTNET_VERSION: '9.0.x'
 
 jobs:
   build-and-deploy:
-    runs-on: windows-latest # For Linux, use ubuntu-latest
+    runs-on: windows-latest
     environment: dev
     steps:
-    - name: 'Checkout GitHub Action'
+    - name: Checkout
       uses: actions/checkout@v4
 
-    # Use Azure RBAC (preferred) by logging in with a service principal stored in the AZURE_RBAC_CREDENTIALS secret
-    - name: 'Login via Azure CLI'
+    - name: Login via Azure CLI
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }} # set up AZURE_RBAC_CREDENTIALS secret in your repository
+        creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }}
 
-    - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
+    - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: 'Resolve Project Dependencies Using Dotnet'
-      shell: pwsh # For Linux, use bash
+    - name: Publish Function Project
+      shell: pwsh
       run: |
-        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-        dotnet build --configuration Release --output ./output
+        pushd ${{ env.AZURE_FUNCTIONAPP_PROJECT_PATH }}
+        dotnet publish -c Release -o ./output
         popd
 
-    - name: 'Run Azure Functions Action'
+    - name: Run Azure Functions Action
       uses: Azure/functions-action@v1
       id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output' # publish-profile removed to use Azure RBAC via azure/login
+        package: '${{ env.AZURE_FUNCTIONAPP_PROJECT_PATH }}/output'
